shared/css/bootstrap_override.css
/* ... */
.toggle-switch:not([data-ts-color]) input:not(:disabled):checked + .ts-helper:before {
	background: #009688
}
.toggle-switch:not([data-ts-color]) input:not(:disabled):checked + .ts-helper:active:before {
	box-shadow: 0 2px 8px rgba(0, 0, 0, .28), 0 0 0 20px rgba(0, 150, 136, .2)
}
.toggle-switch.disabled {
	opacity: .6;
	filter: alpha(opacity=60)
}
.toggle-switch[data-ts-color=red] input:not(:disabled):checked + .ts-helper {
	background: rgba(244, 67, 54, .5)
}
.toggle-switch[data-ts-color=red] input:not(:disabled):checked + .ts-helper:before {
	background: #F44336
}
.toggle-switch[data-ts-color=red] input:not(:disabled):checked + .ts-helper:active:before {
	box-shadow: 0 2px 8px rgba(0, 0, 0, .28), 0 0 0 20px rgba(244, 67, 54, .2)
}
.toggle-switch[data-ts-color=blue] input:not(:disabled):checked + .ts-helper {
	background: rgba(33, 150, 243, .5);
}
.toggle-switch[data-ts-color=blue] input:not(:disabled):checked + .ts-helper:before {
	background: #2196F3
}
.toggle-switch[data-ts-color=blue] input:not(:disabled):checked + .ts-helper:active:before {
	box-shadow: 0 2px 8px rgba(0, 0, 0, .28), 0 0 0 20px rgba(33, 150, 243, .2)
}
.toggle-switch[data-ts-color=amber] input:not(:disabled):checked + .ts-helper {
	background: rgba(255, 193, 7, .5)
}
.toggle-switch[data-ts-color=amber] input:not(:disabled):checked + .ts-helper:before {
	background: #FFC107
}
.toggle-switch[data-ts-color=amber] input:not(:disabled):checked + .ts-helper:active:before {
	box-shadow: 0 2px 8px rgba(0, 0, 0, .28), 0 0 0 20px rgba(255, 193, 7, .2)
}
.toggle-switch[data-ts-color=purple] input:not(:disabled):checked + .ts-helper {
	background: rgba(186, 104, 200, .5)
}
.toggle-switch[data-ts-color=purple] input:not(:disabled):checked + .ts-helper:before {
	background: #BA68C8
}
.toggle-switch[data-ts-color=purple] input:not(:disabled):checked + .ts-helper:active:before {
	box-shadow: 0 2px 8px rgba(0, 0, 0, .28), 0 0 0 20px rgba(186, 104, 200, .2)
}
.toggle-switch[data-ts-color=pink] input:not(:disabled):checked + .ts-helper {
	background: rgba(233, 30, 99, .5)
}
.toggle-switch[data-ts-color=pink] input:not(:disabled):checked + .ts-helper:before {
	background: #E91E63
}
.toggle-switch[data-ts-color=pink] input:not(:disabled):checked + .ts-helper:active:before {
	box-shadow: 0 2px 8px rgba(0, 0, 0, .28), 0 0 0 20px rgba(233, 30, 99, .2)
}
.toggle-switch[data-ts-color=lime] input:not(:disabled):checked + .ts-helper {
	background: rgba(205, 220, 57, .5)
}
.toggle-switch[data-ts-color=lime] input:not(:disabled):checked + .ts-helper:before {
	background: #CDDC39
}
.toggle-switch[data-ts-color=lime] input:not(:disabled):checked + .ts-helper:active:before {
	box-shadow: 0 2px 8px rgba(0, 0, 0, .28), 0 0 0 20px rgba(205, 220, 57, .2)
}
.toggle-switch[data-ts-color=cyan] input:not(:disabled):checked + .ts-helper {
	background: rgba(0, 188, 212, .5)
}
.toggle-switch[data-ts-color=cyan] input:not(:disabled):checked + .ts-helper:before {
	background: #00BCD4
}
.toggle-switch[data-ts-color=cyan] input:not(:disabled):checked + .ts-helper:active:before {
	box-shadow: 0 2px 8px rgba(0, 0, 0, .28), 0 0 0 20px rgba(0, 188, 212, .2)
}
.toggle-switch[data-ts-color=green] input:not(:disabled):checked + .ts-helper {
	background: rgba(76, 175, 80, .5)
}
.toggle-switch[data-ts-color=green] input:not(:disabled):checked + .ts-helper:before {
	background: #4CAF50
}
.toggle-switch[data-ts-color=green] input:not(:disabled):checked + .ts-helper:active:before {
	box-shadow: 0 2px 8px rgba(0, 0, 0, .28), 0 0 0 20px rgba(76, 175, 80, .2)
}
input[disabled] {
	color: #9e9e9e;
}
.jqx-grid-cell-alt {
	background: #f5f5f5 !important;
}
.caption-sm {
	overflow-y: visible;
	height: auto;
}
.MediaAccordionHide {
	display: none;
}
.MediaAccordionShow {
	display: block;
}
.count {
	display: inline-block;
	line-height: 1rem;
}
.align-left-center {
	text-align: center;
}
.align-right-center {
	text-align: center;
}
.col-form-label {
	padding-bottom: 0;
	line-height: 1;
}
#map {
	height: 350px;
}
.variedHeight {
	height: 210px;
}
a.btn-sm {
	height: calc(1.5rem + .5rem + 1px);
}
#searchbuilder-search.btn-sm, #save-account.btn-sm, #save-fixed-search.btn-sm {
	font-size: .78rem;
	height: 5rem;
}
.html_desc {
	width: 100% !important;
}
/* styles for locality maps */
.uglyGeoSPatData {
	border: 4px solid red;
}
.niceGeoSPatData {
	border: 3px solid green;
}
.noWKT {
	border: 3px solid yellow;
}
/* end styles for locality maps */
/* styles for geolocate frame */
.editAppBox {
	border: 1px solid gray;
	z-index: 9998;
	position: fixed;
	top: 1%;
	left: 2%;
	width: 95%;
	height: 96%;
	background-color: lightgray;
	overflow: auto;
}
.editFrame {
	border-top: 1px solid gray;
	position: fixed;
	top: 40px;
	left: 2%;
	width: 95%;
	height: 90%;
	z-index: 9998;
}
.popDiv {
	border: 3px solid green;
	z-index: 9999;
	position: absolute;
	background-color: white;
	overflow: auto;
}
.fancybox-close {
	background: url("/shared/images/fancybox.png") repeat scroll -40px 0 transparent;
	cursor: pointer;
	height: 30px;
	position: absolute;
	right: 0;
	top: 0;
	width: 30px;
	z-index: 10999;
}
.centeredImage {
	position: absolute;
	top: 50%;
	left: 50%;
	margin-top: -25px;
	margin-left: -100px;
	border: 1px solid white;
}
input, select, textarea {
	font-size: 16px;
}
.wiki-drawer {
	position: fixed;
	top: 0;
	left: 0;
	width: 93vw; /* drawer almost full width */
	max-width: 93vw;
	bottom: 0;
	transform: translateX(-93vw); /* fully hidden when closed */
	background: #fff;
	box-shadow: 2px 0 10px rgba(0, 0, 0, 0.15);
	z-index: 1051;
	overflow-y: auto;
	overflow-x: hidden;
	transition: transform 0.3s ease;
}
.wiki-drawer.open {
	transform: translateX(0);
}
#content {
/*	transition: margin-left 0.3s cubic-bezier(.77, 0, .18, 1);*/
	width: 100%;
	box-sizing: border-box;
}
/* Don’t push content on these sizes */
#content.pushed {
	margin-left: 0;
	width: 93%;
}
/* ... */

